Set overflow hidden on .team_overview to prevent spillover of services

--- a/src/app/teams/teams.module.scss
+++ b/src/app/teams/teams.module.scss
@@ -132,6 +132,7 @@
     max-height: 900px;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
   }
 
   > div.left {
